--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Alek-S/FriendFinder#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "chalk": "^1.1.3",
     "express": "^4.15.2",
     "path": "^0.12.7"
   }
