--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.17.1",
     "chalk": "^1.1.3",
     "express": "^4.15.2",
+    "lodash": "^4.17.4",
     "path": "^0.12.7"
   }
 }
